QTaggedPointer: fix warning due to integer type conversion

Fixes: QTBUG-112222
Change-Id: I4815d83c23e7616548ea84779d1c3d0774e77f69
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit ce58c66ae81c92f4c3a538ecdd9ec1108b19352f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>