src/corelib/tools/qtaggedpointer.h
@@ -21,7 +21,7 @@ namespace QtPrivate {
         static_assert((alignment & (alignment - 1)) == 0,
             "Alignment of template parameter must be power of two");
 
-        static constexpr quint8 tagBits = QtPrivate::qConstexprCountTrailingZeroBits(alignment);
+        static constexpr quint8 tagBits = quint8{QtPrivate::qConstexprCountTrailingZeroBits(alignment)};
         static_assert(tagBits > 0,
             "Alignment of template parameter does not allow any tags");
 
